# pyTENAX

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  README.rst  env.yml  environment.yml  postBuild  pyTENAX.py  pyproject.toml  requirements.txt  setup.py  test_tenax.py  traffic-clones.json  traffic-views.json  traffic.json
.github/workflows/: debug_traffic.yml  traffic.yml  weekly_traffic_summary.yml
docs/source/: conf.py  index.rst
docs/source/documentation/: documentation.rst
docs/source/getting_started/: background.rst  install.rst  overview.rst  references.rst
docs/source/tutorials/: Tutorial_01.ipynb  Tutorial_02.ipynb  Tutorial_03.ipynb  tutorial_01.ipynb  tutorial_01.rst  tutorial_start.ipynb  tutorials.rst  untitled2.ipynb
example/: example_smev.py  example_smev_new.py  example_smev_new2.py  example_tenax_Aadorf.py  test_convolve_index.py  test_tenax.py
res/: Florida_P.parquet  Hawaii_P.parquet  Hawaii_T.parquet
src/: test_tenax.py  test_tenax_skewnorm.py
src/pyTENAX/: plotting.py  pyTENAX.py  smev.py  smev_class.py  tenax.py  wbl_tail_test.py
src/pyTENAX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyTENAX/res/: temp_data_Aadorf.parquet
tests/: __init__.py  test_SMEV_Mc_inversion.py  test_smev.py  test_tenax.py  test_tenax_model_inversion.py  test_weibull_tail_test.py  test_weibulll_test.py  testforwbltest.csv
