[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyTENAX"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "numpy==1.26.2",
  "pandas==2.2.3",
  "pyarrow==19.0.0",
  "scipy==1.14.1",
  "statsmodels==0.14.4",
  "matplotlib==3.10.0",
  "pre-commit==4.1.0"
]
description = "Non-Asymptotic statistical model for eXtreme return levels (TENAX)"
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11.5",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
authors = [
  {name = "Petr Vohnicky", email = "petr.vohnicky@unipd.it"},
]
maintainers = [
  {name = "Petr Vohnicky", email = "petr.vohnicky@unipd.it"},
]

[project.urls]
url = "https://github.com/PetrVey/pyTENAX"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["res/*"]